# relay

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yaml  elasticmq.Dockerfile  elasticmq.conf
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260308063210_create_videos.sql
backend/src/: errors.rs  main.rs  queue.rs  state.rs  storage.rs  transcoder.rs
backend/src/models/: video.rs
backend/src/routes/: mod.rs  videos.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: Navbar.svelte
frontend/src/routes/: Upload.svelte  VideoPlayer.svelte
worker/: .env.docker  .env.example  Cargo.toml  Dockerfile
worker/src/: config.rs  job.rs  main.rs
