[package]
name = "hot-potato-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

# db
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "runtime-tokio", "uuid", "chrono"] }

# s3/minio
aws-sdk-s3 = { version = "1.125.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }

# utils
uuid = { version = "1.21.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
chrono = { version = "0.4.44", features = ["serde"] }
tempfile = "3.26.0"
anyhow = "1.0.102"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
