[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "time"] }

# aws
aws-sdk-sqs = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }

# db
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "runtime-tokio"] }

# utils
serde_json = "1"
bytes = "1"
dotenvy = "0.15"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
